@@ -22,6 +22,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #9284: Allow inspect.findsource() to find the source of doctest
+  functions.
+
 - Issue #12009: Fixed regression in netrc file comment handling.
 
 - Issue #10694: zipfile now ignores garbage at the end of a zipfile.
